<resources>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="Daniel" translatable="false">Daniel Nguyen</string>
    <string name="Andrew" translatable="false">Andrew Best</string>
    <string name="Arvind" translatable="false">Arvind Sahota</string>
    <string name="Johnson" translatable="false">Johnson Huynh</string>
    <string name="Alec" translatable="false">Alec Tarrant</string>

    <string name="app_name">HealthBot</string>
    <string name="app_slogan">A Chatbot for Your Health</string>
    <string name="loginError">Incorrect Username/Password</string>
    <string name="welcome">Welcome!</string>

    <!--Tutorial-->
    <string name="tutorial1">What are the features of Healthbot?</string>
    <string name="tutorial2">BMI Calculator:\nAdjust the number picks to your height (cm) and weight (kg). Your calculated BMI will be shown below. Click on the Red Robot at the bottom to see the BMI chart.</string>
    <string name="tutorial3">Profile:\nCreate your profile including your age, sex, and year of birth.</string>
    <string name="tutorial4">Chat bot:\nEnter your symptoms (Enter !symptoms for a list) line by line. After, enter !Done to finish and receive your diagnosis.</string>
    <string name="tutorial5">Login screen:\nEnter your credentials to log in (any password is OK but cannot be empty).</string>
    <string name="tutorial6">Diagnosis History:\nView your diagnosis history here. Click on them for more details.</string>


    <!-- BMI -->
    <string name="BMIName">Body Mass Index (BMI) Calculator</string>
    <string name="BMIButtonName">BMI</string>
    <string name="BMIHeight">Height</string>
    <string name="BMIWeight">Weight</string>
    <string name="BMIcm">cm</string>
    <string name="BMIkg">kg</string>
    <string name="BMIChartTitle">BMI Index (Adult)</string>
    <string name="BmiChartText">Underweight: &lt;18.5\nNormal 18.5-24.9\nOverweight: 25-29.9\nObese:30+</string>
    <string-array name="heightSpinnerOptions">
        <item>cm</item>
        <item>in</item>
    </string-array>
    <string-array name="weightSpinnerOptions">
        <item>kg</item>
        <item>cm</item>
    </string-array>

    <!--LoginActivity -->
    <string name="banner_title">HealthChat</string>
    <string name="loginText">Sign In</string>
    <string name="loginHint">Example@example.com</string>
    <string name="passwordHint">Password</string>
    <string name="loginButtonText">Login</string>
    <string name="forgotText">Forgot Username/Password?</string>
    <string name="signInWithText">Sign in with:</string>

    <!--MainActivity-->
    <string name="aboutButton">About Us</string>
    <string name="historyButton">Diagnosis History</string>
    <string name="chatButton">Chat Button</string>
    <string name="profileButton">User Profile</string>

    <!--HistoryActivity-->
    <string name="historyText">Diagnosis History</string>
    <string name="clear_hist">Clear History?</string>
    <string name="delete_history">Are you sure you want to clear your diagnosis history?</string>
    <string name="clear_history_toast">History Cleared</string>

    <!--Details Fragment-->
    <string name="dh_frag_diag_txt">Diagnosis:</string>
    <string name="dh_frag_default">n/a</string>
    <string name="dh_frag_date_txt">Date:</string>
    <string name="dh_frag_symptom_txt">Symptoms:</string>
    <string name="dh_frag_btn_txt">Delete Diagnosis</string>
    <string name="delete_history_fragment">Are you sure you want to delete this diagnosis?</string>
    <string name="dh_frag_toast">Diagnosis Deleted</string>

    <!--ChatActivity-->
    <string name="SendButton">Send</string>
    <string name="EntryMessage">Hello, please enter your symptoms one by one. When you\'re done type !Done. For a list of symptoms type !Symptoms</string>
    <string name="InvalidResponse">I\'m sorry, that\'s an invalid response. Make sure you typed your response correctly and if you need a refresher of the Symptoms type !Symptoms</string>
    <string name="StillProcessing">Sorry! We are still processing your last messsage please try again.</string>
    <string name="Diagnosis">Possible health Issues from most to least likely:</string>

    <!--    EditProfiles   -->
    <string name="profiles">Profiles</string>
    <string name="edit_info">Edit Info</string>
    <string name="exit">Exit</string>
    <string name="prof_delete_confirm">Do you want delete this profile?</string>
    <string name="delete_last_user">Cannot Delete Last User</string>

    <!--    SharedPreferencesActivity   -->
    <string name="name">Name</string>
    <string name="name_hint">Enter your name</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter your email</string>
    <string name="age">Age</string>
    <string name="age_hint">Enter your Age</string>
    <string name="birth">Birth Year</string>
    <string name="birth_hint">Enter your Year of Birth</string>
    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_unknown">undetermined</string>
    <string name="save">Save</string>
    <string name="preference_name">DefaultEmail</string><!--do not change file name-->
    <string name="key_name">name</string>
    <string name="key_birth">birth</string>
    <string name="key_gender">gender</string>
    <string name="save_message">Saved</string>

    <!--Warning-->
    <string name="warning">Caution</string>
    <string name="warningMsg">This application is not real medical advice. Please call 911 for immediate medical attention.</string>
    <string name="understood">Understood.</string>

    <!--Help Activity-->
    <string name="help_name">Help Center</string>


</resources>