<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/warningLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="#ffffff"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/warningTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/warning"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold"
            android:drawableRight="@drawable/ic_baseline_warning_amber_24"
            android:drawableLeft="@drawable/ic_baseline_warning_amber_24"/>

        <TextView
            android:id="@+id/warningText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/warningMsg"
            android:textSize="18sp" />
    <Button
        android:id="@+id/understoodButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/understood"
        android:layout_below="@id/warningLL"
        android:layout_centerHorizontal="true"
        android:padding="25dp" />
    </LinearLayout>

</RelativeLayout>