<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    tools:context=".BMICalculator">

    <include
        android:id="@+id/bmi_top_panel"
        layout="@layout/bmi_top_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/heightLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center">

        <TextView
            android:text="@string/BMIHeight"
            android:textColor="#00bcd4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:drawableLeft="@drawable/ic_baseline_vertical_align_center_24"/>

        <NumberPicker
            android:id="@+id/heightPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            />

        <TextView
            android:id="@+id/heightSpinner"
            android:text="@string/BMIcm"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#00bcd4"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/weightLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center">

        <TextView
            android:text="@string/BMIWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:textColor="#00bcd4"
            android:drawableLeft="@drawable/ic_baseline_swap_horiz_24"/>

        <NumberPicker
            android:id="@+id/weightPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp" />

        <TextView
            android:id="@+id/weightSpinner"
            android:text="@string/BMIkg"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#00bcd4"/>
    </LinearLayout>

    <TextView
        android:id="@+id/BMIResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:textColor="#f44335"
        android:padding="5dp"
        />

    <TextView
        android:id="@+id/BMIResultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:textColor="#f44335"
        android:padding="5dp"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/redrobot"/>

</LinearLayout>