<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/layoutToBeReplacedWithFragmentinMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/robot_icon" />

            <TextView
                android:id="@+id/custom_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="24sp"
                android:textStyle="bold"/>
            </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:layout_marginTop="12dp">

            <ImageButton
                android:id="@+id/chatBtn"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="60dp"
                android:layout_marginTop="80dp"
                android:icon="@drawable/robot_icon"
                android:scaleType="fitCenter"

                android:src="@drawable/robot_icon"

                android:text="Chat"
                app:layout_constraintEnd_toStartOf="@+id/profileBtn"
                app:layout_constraintHorizontal_bias="0.5" />

            <ImageButton
                android:id="@+id/profileBtn"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="80dp"
                android:layout_toEndOf="@id/chatBtn"
                android:icon="@drawable/ic_baseline_person_24"
                android:onClick="edit_profile"
                android:scaleType="fitCenter"

                android:src="@drawable/profile_icon"
                android:text="@string/profiles" />

            <ImageButton
                android:id="@+id/bmiButton"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_below="@+id/chatBtn"
                android:layout_alignParentStart="true"
                android:layout_marginStart="60dp"
                android:layout_marginTop="50dp"
                android:icon="@drawable/bmi_icon"
                android:scaleType="fitCenter"
                android:src="@drawable/bmi_icon"
                android:text="@string/BMIButtonName" />

            <ImageButton
                android:id="@+id/historyButton"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_below="@+id/profileBtn"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/bmiButton"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="50dp"
                android:icon="@drawable/history_icon"
                android:src="@drawable/history_icon"
                android:scaleType="fitCenter"
                 />

            <ImageButton
                android:id="@+id/warningButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_warning_24" />

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>